fix contrast errors

--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -69,6 +69,7 @@ nav {
 .date {
     margin: auto;
     background-color: #00A1D9;
+    color:#003056;
     height: 30px;
     text-align: center;
     font-size: 1.5em;
